# ledmatrix-preview-sidecar

./: .gitignore  Cargo.toml  Dockerfile  README.md
.gitea/workflows/: deploy.yml
src/: main.rs
src/auth/: mod.rs
src/net/: mod.rs  tcp_command.rs  tcp_frame.rs
src/state/: app_state.rs  mod.rs
src/util/: encoding.rs  mod.rs
src/ws/: mod.rs  websocket.rs
