[package]
name = "rust-preview"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.9", features = ["ws", "macros"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.3", features = ["json"] }
dashmap = "6.1.0"
base64 = "0.22"
png = "0.18.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
